templates/green/css/template.css
/* ... */
/**Other**/
.p_rel{
	position:relative;
}
#frame {
	/*position: absolute;*/
}
.content {
	margin: auto;
	width: 1200px;
}
.f_right {
	float:right;
}
#tbl_cover {
	position: absolute;
	width: 35%;
	right: 5%;
	top: 15%;
}/*
#tbl_cover li {
    margin: 0;
    padding: 0;
    list-style: none;
    position: absolute;
    top: 0;
}*/
#tbl_cover a , #tbl_cover li{
	display: block;
}
#tbl_name a{
	background: transparent url(../images/tbl_cardname.png) no-repeat scroll right 50% top 10%;
	background-size: 60%;
	height: 200px;
}
#tbl_coin, #tbl_coin a:hover {
	background: url(../images/tbl_coin.png) no-repeat 0px -168px;
	height: 168px;
	width: 160px;
}
#tbl_coin a:hover {
	background-position: 0px 0px;
}
#tbl_coin a {
	height: 168px;
}
#tbl_picture, #tbl_picture a:hover {
	background: url(../images/tbl_picture.png) no-repeat 0px -232px;
	float: right;
	height: 230px;
	width: 300px;
}
#tbl_picture a:hover {
	background-position: 0px 0px;
}
#tbl_picture a {
	height: 230px;
}
/* -------------------------------------------------Green-------------------------------------------------------- */
body {
	/*background-image: url(../images/b2.jpg);*/
	font: normal 14px/20px Arial, Helvetica, sans-serif;
	/* font-family: 'montserratregular'; */
	color: #5A5A5A;
	opacity: 0;
	
}
body#homepage {
	background: url('../images/bg_toibalo.png'); 
	background-color: #c3936e;
	background-size: 120%;
	background-position: top;
	background-repeat: no-repeat;
}

@media (max-width: 767px) {
	.navbar .container {
		width: auto;
	}
}
@media (min-width: 1200px) {
	.navbar .container {
		width: 1170px;
	}
}
@media (max-width: 979px) {
	.nav-collapse .nav > li > a {
		float:none;
		-webkit-border-radius: 0px;
		-moz-border-radius: 0px;
		border-radius: 0px;
	}
	.nav-collapse .nav > li {
		float:left;
	}
	.navbar-toggle {
		display: block;
	}
	.nav-collapse .dropdown-menu a {
		-webkit-border-radius: 0px;
		-moz-border-radius: 0px;
		border-radius: 0px;
	}
/*	.navbar .nav > .active > a, */
	.navbar .nav > .active > a:hover, 
	.navbar .nav > .active > a:focus, 
	.navbar .nav > li > a:focus, 
	.navbar .nav > li > a:hover {
		background-color: #009edb;
		color: #8ed8f8;
	}
	#tbl_cover {
		display:none;
	}
	body#homepage {
	background: url('../images/bg_toibalomini.png') !important ;
	background-size: 100% !important;
	}
	#tbl_search {
		width: 45%;
		margin-left: 27%;
	}
	.tbl_search_title {
		font-size: 2.7em;
	}
	.tbl_search_form select {
		width: 70%;
	}
	#tbl_search .tbl_button {
		width: 20%;
	}
	#tbl_search .tbl_button input {
		height: 25px;
	}
}
/***Default**/
a,
a:link,
a:visited,
.avatar-main-menu ul li a:hover,
.avatar-main-menu ul li span:hover {
    color: #009edb;
    cursor: pointer;
}

#avatar-pos-top-right .avatar-module {
    float: right;
}

/*======= LOGO =======*/
.st-logo-template:hover,
.st-logo-template {
    color: #009edb;
    width: 100%;
    display: block;
    font-size: 47px;
/*     font-family: 'montserratbold'; */
    line-height: 47px;
    padding: 0px 0;
    text-decoration: none;
    height: 50px;
}
/* ... */

